# parker-scheduling-intelligence

./: .env.example  .gitignore  BUSINESS_OVERVIEW.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: scenario-report.yml
alembic/: env.py
alembic/versions/: 0001_baseline_schema.py  0001_baseline_with_confirmations.py  0002_callout_job_status.py
app/: config.py  deps.py  exceptions.py  main.py
app/db/: seed.py  session.py
app/integrations/: __init__.py
app/models/: __init__.py  base.py  exclusion.py  hours.py  notification.py  recommendation.py  schedule.py  staff.py  unit.py
app/routes/: admin.py  callout.py  confirmation.py  (+6 more)
config/: scoring_weights.yaml
docs/: PARKER_STAKEHOLDER_DEMO_READOUT.md  UNITED_HEBREW_STAKEHOLDER_DEMO_READOUT.md  parker_demo_minimalist_presentation.pptx  parker_scheduling_intelligence_current_demo_summary.docx  trainer_demo_guidance.txt  united_hebrew_demo_presentation.pptx  united_hebrew_scheduling_intelligence_current_demo_summary.docx
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: generate_demo_ppt.py  generate_scenario_report.py  generate_timeclock_data.py  ingest_timeclock.py  run_shadow_mode.py  seed_dev_data.py
tests/: conftest.py  test_confirmation_commit.py  test_filter.py  test_overtime.py  test_proximity.py  test_rationale.py  test_scenario_report.py  test_scheduler.py  test_scoring.py  test_shift_utils.py  test_staffing_requirements.py  test_timeclock_ingest.py  test_timeout_sweep.py  test_workload.py
(+93 files in other folders)
